--- a/webSocketServer/public/index.html
+++ b/webSocketServer/public/index.html
@@ -7,7 +7,10 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello world</h1>
+    <form action="" name="myForm">
+      <input type="text" name="num" />
+      <button>Send</button>
+    </form>
     <script src="./js/main.js"></script>
   </body>
 </html>
